# DynamicAnimations

./: README.md  package-lock.json
.github/workflows/: azure-static-web-apps-kind-river-014de1a1e.yml  azure-static-web-apps-lemon-bush-0d1b0e71e.yml  azure-static-web-apps-nice-sand-0d827421e.yml  azure-static-web-apps-nice-sea-040231e1e.yml  azure-static-web-apps-proud-stone-0278d8d10.yml
DynamicAnimations/: README.md  index.html  package-lock.json  package.json  vite.config.js
DynamicAnimations/src/: App.jsx  Canvas.css  Interface.jsx  Main.css  MainWasm.jsx  OnOffAni.jsx  Site.css  Stars.jsx  index.css  main.jsx  mainWasm.jsx
DynamicAnimations/src/AnimationLogic/: Marbling.jsx  Particle.jsx  Rain.jsx  Sand.jsx  Stars.jsx  WaveFunction.jsx
DynamicAnimations/src/Images/: DragonEye.jsx
DynamicAnimations/src/Interface/: SlidePage.jsx
DynamicAnimations/src/Wasm/: main.cpp  makefile  sdl_app.mjs  sdl_app.wasm
DynamicAnimations/src/components/: background.jsx  eye.jsx
DynamicAnimations/src/images/: Background.jsx  backgroundSvg.jsx  (+1 more)
DynamicAnimations/src/wasm/: CMakeLists.txt  main.cpp  sdl_app.mjs
DynamicAnimations/src/wasm/Converge/: Converge.cpp  ConvergeHeader.h
DynamicAnimations/src/wasm/Shapes/: Shapes.cpp  Shapes.h
DynamicAnimations/src/wasm/converge/: classes.cpp  classes.h  converge.cpp
DynamicAnimations/src/wasm/helper/: helper.h  shapes.cpp  vector.cpp
DynamicAnimations/src/wasm/particle/: particle.cpp  particleHeader.h
DynamicAnimations/src/wasm/pixelAni/: classes.cpp  classes.h  pixel.cpp  pixel.h  pixelUtil.cpp  pixelUtil.h
(+19 files in other folders)
